--- a/fitness360_web/docker-compose.yml
+++ b/fitness360_web/docker-compose.yml
@@ -7,3 +7,29 @@ services:
       - "8080:80"
     volumes:
       - ./src:/var/www/html
+    environment:
+      DB_HOST: tramway.proxy.rlwy.net
+      DB_PORT: 41615
+      DB_NAME: fitness360
+      DB_USER: root
+      DB_PASS: pzrbJzPSKtWnwWVdNEGyCKKGSqlYhMvR
+
+  db:
+    image: mysql:latest
+    container_name: mysql_container
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: fitness360
+      MYSQL_USER: root
+      MYSQL_PASSWORD: pzrbJzPSKtWnwWVdNEGyCKKGSqlYhMvR
+    ports:
+      - "41615:41615"
+    volumes:
+      - mysql_data:/var/lib/mysql
+
+volumes:
+  mysql_data:
+
+
+
